expose only the name field of user

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
@@ -51,10 +51,10 @@
                         </li>
                         {% elif active == 'hub' and user %}
                         <li>
-                            <a href="https://login.gesis.org/">
+                            <a href="#">
                                 <span class="top-menu-item hidden-xs">
                               <span aria-hidden="true" class="glyphicon glyphicon glyphicon-user"></span>
-                              {{ user }}
+                              {{ user.name }}
                           </span>
                             </a>
                         </li>
