Add option to directly go to the current running server

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
@@ -58,21 +58,21 @@
                           </span>
                             </a>
                         </li>
+                        {% if user.spawner.active %}
+                        <li>
+                            <a href="{{ gesishub_url }}/user/{{ user.name }}">
+                                <span class="top-menu-item hidden-xs">
+                              <span aria-hidden="true" class="glyphicon glyphicon glyphicon-hdd"></span>
+                              My Server
+                          </span>
+                            </a>
+                        </li>
+                        {% endif %}
                         <li>
                             <a href="{{ logout_url }}">
                                 <span class="top-menu-item hidden-xs">
                               <span aria-hidden="true" class="glyphicon glyphicon glyphicon-log-out"></span>
                               Logout
-                          </span>
-                            </a>
-                        </li>
-                        {% endif %}
-                        {% if active == 'hub' and user and user.spawner.active %}
-                        <li>
-                            <a href="{{ gesishub_url }}/user/{{ user.name }}">
-                                <span class="top-menu-item hidden-xs">
-                              <span aria-hidden="true" class="glyphicon glyphicon glyphicon-log-out"></span>
-                              My Server
                           </span>
                             </a>
                         </li>
