--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
@@ -58,6 +58,16 @@
                           </span>
                             </a>
                         </li>
+                        {% if user.spawner.active %}
+                        <li>
+                            <a href="{{ gesishub_url }}/user/{{ user.name }}">
+                                <span class="top-menu-item hidden-xs">
+                              <span aria-hidden="true" class="glyphicon glyphicon glyphicon-hdd"></span>
+                              My Server
+                          </span>
+                            </a>
+                        </li>
+                        {% endif %}
                         <li>
                             <a href="{{ logout_url }}">
                                 <span class="top-menu-item hidden-xs">
