--- a/gesishub/gesishub/files/etc/jupyterhub/templates/faq.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/faq.html
@@ -64,6 +64,10 @@
 
 {% block extra_js %}
   <script type="text/javascript">
+   var url = document.location.toString();
+   if ( url.match('#q') ) {
+    $('#'+url.split('#q')[1]).collapse('show');
+   };
     $('.panel-collapse').on('show.bs.collapse', function () {
      $(this).siblings('.panel-heading').addClass('active');
    });
@@ -71,9 +75,5 @@
    $('.panel-collapse').on('hide.bs.collapse', function () {
      $(this).siblings('.panel-heading').removeClass('active');
    });
-   var url = document.location.toString();
-   if ( url.match('#') ) {
-    $('#'+url.split('#')[1]).collapse('show');
-   };
   </script>
 {% endblock extra_js %}
