--- a/gesishub/gesishub/files/etc/jupyterhub/templates/faq.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/faq.html
@@ -64,11 +64,16 @@
 
 {% block extra_js %}
   <script type="text/javascript">
-   var url = document.location.toString();
-   console.log(url);
-   if ( url.match('#q') ) {
-    $('#'+url.split('#q')[1]).collapse('show');
-   };
+    function auto_show() {
+      var url = document.location.toString();
+      console.log(url);
+      if ( url.match('#q') ) {
+        $('#'+url.split('#q')[1]).collapse('show');
+      }
+    };
+    auto_show();
+   
+   
     $('.panel-collapse').on('show.bs.collapse', function () {
      $(this).siblings('.panel-heading').addClass('active');
    });
