--- a/gesishub/gesishub/files/etc/jupyterhub/templates/faq.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/faq.html
@@ -74,12 +74,12 @@
     auto_show();
    
    
-    $('.panel-collapse').on('show.bs.collapse', function () {
-     $(this).siblings('.panel-heading').addClass('active');
-   });
+   //  $('.panel-collapse').on('show.bs.collapse', function () {
+   //   $(this).siblings('.panel-heading').addClass('active');
+   // });
 
-   $('.panel-collapse').on('hide.bs.collapse', function () {
-     $(this).siblings('.panel-heading').removeClass('active');
-   });
+   // $('.panel-collapse').on('hide.bs.collapse', function () {
+   //   $(this).siblings('.panel-heading').removeClass('active');
+   // });
   </script>
 {% endblock extra_js %}
