create a takeout button

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/takeout.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/takeout.html
@@ -1,3 +1,8 @@
 {% extends "page.html" %}
 
-<p> Test Takeout </p>
+
+{% block download_data %}
+
+<p> Hello {{ user }}!</p>
+<button class="btn btn-lg btn-primary>Takeout Data</button>
+{% endblock %}
