--- a/gesishub/gesishub/files/etc/jupyterhub/templates/takeout.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/takeout.html
@@ -1,8 +1,9 @@
 {% extends "page.html" %}
 
 
-{% block download_data %}
+{% block main %}
 
 <p> Hello {{ user }}!</p>
-<button class="btn btn-lg btn-primary>Takeout Data</button>
+<button class="btn btn-lg btn-primary">Takeout Data</button>
+
 {% endblock %}
