add takeout to nav;

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/nav.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/nav.html
@@ -26,6 +26,7 @@
                         <li><a href="{{ gesisbinder_url }}" {% if active == 'binder' %}id="navbar-active-a" class="gs_active_sub"{% endif %}>Binder</a></li>
                         <li><a href="{{ gallery_url }}" {% if active == 'gallery' %}id="navbar-active-a" class="gs_active_sub"{% endif %}>Gallery</a></li>
                         <li><a href="{{ faq_url }}" {% if active == 'faq' %}id="navbar-active-a" class="gs_active_sub"{% endif %}>FAQ</a></li>
+                        <li><a href="{{ base_url }}takeout" >Download Data</a></li>
                     </ul>
                 </div>
             </div>
