--- a/gesishub/gesishub/files/etc/jupyterhub/templates/takeout.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/takeout.html
@@ -3,7 +3,8 @@
 
 {% block main %}
 
-<p> Hello {{ user }}!</p>
-<button class="btn btn-lg btn-primary">Takeout Data</button>
-
+<div id="main-container" class="container">
+	<p> Hello {{ user.name }}!</p>
+	<button class="btn btn-lg btn-primary">Takeout Data</button>
+</div>
 {% endblock %}
