show up only if logged in

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/nav.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/nav.html
@@ -23,10 +23,12 @@
                         {% else %}
                         <li><a href="{{ home_url }}" {% if active == 'home' %}id="navbar-active-a" class="gs_active_sub"{% endif %}>Home</a></li>
                         {% endif %}
+                        {% if user %}
+                        <li><a href="{{ base_url }}takeout" >Download Data</a></li>
+                        {% endif %}
                         <li><a href="{{ gesisbinder_url }}" {% if active == 'binder' %}id="navbar-active-a" class="gs_active_sub"{% endif %}>Binder</a></li>
                         <li><a href="{{ gallery_url }}" {% if active == 'gallery' %}id="navbar-active-a" class="gs_active_sub"{% endif %}>Gallery</a></li>
                         <li><a href="{{ faq_url }}" {% if active == 'faq' %}id="navbar-active-a" class="gs_active_sub"{% endif %}>FAQ</a></li>
-                        <li><a href="{{ base_url }}takeout" >Download Data</a></li>
                     </ul>
                 </div>
             </div>
