--- a/gesishub/gesishub/files/etc/jupyterhub/templates/takeout.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/takeout.html
@@ -6,8 +6,8 @@
 	<p>
 	Hello {{ user.name }}! You can download a tarball of all of your data on GESIS Notebooks. This can take some time as the data archive can be upto 10GB so do make sure you have enough network bandwidth and local storage space to store this data.
 	</p>
-	<form method="get" action="test.tar.xz">
-		<button type="submit" class="btn btn-lg btn-primary">Takeout Data</button>
-	</form>
+	<button onclick="document.getElementById('link').click()" class="btn btn-lg btn-primary">Takeout Data</button>
+	<a id="link" href="https://github.com/binder-examples/requirements/archive/refs/heads/master.zip" download hidden></a>
+
 </div>
 {% endblock %}
