--- a/gesishub/gesishub/files/etc/jupyterhub/templates/about.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/about.html
@@ -107,10 +107,7 @@
                onclick="window.location.href='mailto:'+this.dataset.name+'@'+this.dataset.domain+'.'+this.dataset.tld+'?subject=Feedback'; return false;"
              target="_top">
                 feedback</a>
-            if you have suggestions for improvements. The source code of the project is freely available
-            at our <a href="https://github.com/gesiscss/orc"> GitHub Repository </a>.<!--  and
-            <a href="/gallery/api/v1.0/">an API for launch events</a>
-            on GESIS Binder and on Binder Federation is available. -->
+            if you have suggestions for improvements. The source code of the project is freely available at our <a href="https://github.com/gesiscss/orc"> GitHub Repository </a>and <a href="/gallery/api/v1.0/">an API for launch events</a> on GESIS Binder and on Binder Federation is available.
         </p>
 </div>
 </div>
