hardcode the URL for now

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/takeout.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/takeout.html
@@ -10,7 +10,7 @@
 		You can download a tarball (.tar.xz) of all of your data stored on GESIS Notebooks. The download can take some time as the data archive can be upto 10GB so do make sure you have enough network bandwidth and local storage space to store this data. Just click on the button below to start downloading your data.
 	</p>
 	<button onclick="document.getElementById('link').click()" class="btn btn-lg btn-primary">Takeout Data</button>
-	<a id="link" href="{{ home_url }}/usertakeout/{{ takeout_url }}" download="{{ user.name }}.tar.xz" hidden></a>
+	<a id="link" href="https://notebooks.gesis.org/usertakeout/{{ takeout_url }}" download="{{ user.name }}.tar.xz" hidden></a>
 	<br>
 	<br>
 	<p class="lead">
