update home page

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/orc_home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/orc_home.html
@@ -49,7 +49,6 @@
 </div>
 {% endblock projects_form %}
 
+  {% block how_it_works %}
 
-  {% block extra_main_content %}
-  {% include "featured_projects.html" %}
-  {% endblock extra_main_content %}
+  {% endblock how_it_works %}
