--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
@@ -3,6 +3,9 @@
         <div>
             <div id="header-container" class="container">
                 <div class="navbar-header">
+                    <a class="navbar-brand">
+                        <p>PersistentBinderHub will temperarily shut down on the 15th of December.</p>
+                    </a>
 
                     <a class="navbar-brand" href="{{ gesis_url }}">
                         <img src="{{ static_nginx }}images/gs_home_logo_en.svg?v={{ static_version }}" class="hidden-sm hidden-xs" width="200" height="37">
