add more details to the announcement

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
@@ -9,7 +9,7 @@
                     </a>
 
                     <div class="header_banner">
-                        <h4> PersistentBinderHub will temperarily shut down on the 15th of December </h4>
+                        <h4> PersistentBinderHub will temperarily shut down on the 15th of December. Please export your data. You can read the email sent out to all users here.</h4>
                     </div>
                     <div class="pull-right visible-xs hidden-sm hidden-md hidden-lg">
                         <ul class="nav nav-pills pull-left ">
