--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
@@ -8,8 +8,8 @@
                         <img src="{{ static_nginx }}images/gs_small_logo_de.svg?v={{ static_version }}" class="visible-sm visible-xs">
                     </a>
 
-                    <div class="header_banner">
-                        <h4> PersistentBinderHub will temperarily shut down on the 15th of December. Please export your data. You can read the email sent out to all users here.</h4>
+                    <div class="header_announce">
+                        <h4> PersistentBinderHub will temperarily shut down on the 15th of December 2021, you can export your data using the <a href="">Data Export service</a>. You can read the email sent out to all users <a href="">here</a>.</h4>
                     </div>
                     <div class="pull-right visible-xs hidden-sm hidden-md hidden-lg">
                         <ul class="nav nav-pills pull-left ">
