--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
@@ -7,8 +7,11 @@
                         <img src="{{ static_nginx }}images/gs_home_logo_en.svg?v={{ static_version }}" class="hidden-sm hidden-xs" width="200" height="37">
                         <img src="{{ static_nginx }}images/gs_small_logo_de.svg?v={{ static_version }}" class="visible-sm visible-xs">
                     </a>
-
-
+                    <div class="navbar-header pull-right hidden-xs">
+                        <div class="header_announce">
+                            <h4> PersistentBinderHub will temperarily shut down on the 15th of December 2021, you can export your data using the <a href="">Data Export service</a>. You can read the email sent out to all users <a href="">here</a>.</h4>
+                        </div>
+                    </div>
                     <div class="pull-right visible-xs hidden-sm hidden-md hidden-lg">
                         <ul class="nav nav-pills pull-left ">
                             {% if active == 'home' %}
@@ -88,9 +91,6 @@
                     </ul>
                 </div>
                 {#<div id="header_banner" class="col-xs-12 hidden-xs hidden-sm">#}
-                    <div class="header_announce">
-                        <h4> PersistentBinderHub will temperarily shut down on the 15th of December 2021, you can export your data using the <a href="">Data Export service</a>. You can read the email sent out to all users <a href="">here</a>.</h4>
-                    </div>
                 <div id="header_banner">
                     <a href="{{ home_url }}">
                         <img src="{{ static_nginx }}images/logo/logo_text_2.png?v={{ static_version }}"
