add the link to email sent to users

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
@@ -9,7 +9,7 @@
                     </a>
                     <div class="navbar-header pull-right hidden-xs">
                         <div class="header_announce">
-                            <h4> PersistentBinderHub will temperarily shut down on the 15th of December 2021, you can export your data using the <a href="">Data Export service</a>. You can read the email sent out to all users <a href="">here</a>.</h4>
+                            <h4> PersistentBinderHub will temperarily shut down on the 15th of December 2021, you can export your data using the <a href="{{ home_url }}/takeout">Data Export service</a>. You can read the email sent out to all users <a href="{{ static_nginx }}email_to_users.html">here</a>.</h4>
                         </div>
                     </div>
                     <div class="pull-right visible-xs hidden-sm hidden-md hidden-lg">
