--- a/gesishub/gesishub/files/etc/jupyterhub/templates/orc_home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/orc_home.html
@@ -47,7 +47,7 @@
       <h3>
           <span id="typed"></span>
       </h3>
-      <a href="{{ login_url }}" class="btn btn-lg btn-warning orc-button" role="button">Try it now >></a>
+      <!-- <a href="{{ login_url }}" class="btn btn-lg btn-warning orc-button" role="button">Try it now >></a> -->
   </div>
 </div>
 {% endblock projects_form %}
