add notice about shutdown on binder homepage

--- a/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/header.html
+++ b/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/header.html
@@ -67,6 +67,13 @@
                         </li>
                     </ul>
                 </div>
+                <div class="navbar-header pull-right hidden-xs">
+                    <div class="header_announce">
+                        <h4> The PersistentBinderHub side of GESIS Notebooks was temporarily shut down
+                            on the 20th of December 2021. You can read the email sent out to all users
+                            <a href="https://gesisnotebooks.github.io/email_to_users.html">here</a>.</h4>
+                    </div>
+                </div>
                 {#<div id="header_banner" class="col-xs-12 hidden-xs hidden-sm">#}
                 <div id="header_banner">
                     <a href="{{ home_url }}">
